--- a/src/Sino.Web/Sino.Web.csproj
+++ b/src/Sino.Web/Sino.Web.csproj
@@ -8,6 +8,7 @@
     <PackageIconUrl>http://avatars0.githubusercontent.com/u/16951448?v=3&amp;s=70</PackageIconUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>asp.net core;web framework;domain driven design</PackageTags>
+    <Description>基础类库</Description>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,6 +19,10 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="2.0.0" />
     <PackageReference Include="NLog" Version="4.5.0-rc06" />
     <PackageReference Include="Scrutor" Version="2.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Sino.Web.ViewModels\Sino.Web.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
