--- a/src/Sino.Web.ViewModels/Sino.Web.ViewModels.csproj
+++ b/src/Sino.Web.ViewModels/Sino.Web.ViewModels.csproj
@@ -2,12 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
-    <Version>1.0.0-beta1</Version>
-    <Authors>Sino</Authors>
-    <Company>Sino</Company>
+    <Version>1.0.0-beta2</Version>
+    <Authors>y-z-f</Authors>
+    <Company>江苏斯诺物联科技有限公司</Company>
     <Description>视图模型基础类</Description>
     <PackageIconUrl>http://avatars0.githubusercontent.com/u/16951448?v=3&amp;s=70</PackageIconUrl>
     <RepositoryType>git</RepositoryType>
+    <PackageLicenseUrl>https://github.com/Vip56/Sino.Web/blob/dev/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/Vip56/Sino.Web</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Vip56/Sino.Web.git</RepositoryUrl>
+    <PackageTags>asp.net core;web framework;domain driven design</PackageTags>
   </PropertyGroup>
 
 </Project>
