--- a/src/Sino.Web/Sino.Web.csproj
+++ b/src/Sino.Web/Sino.Web.csproj
@@ -2,13 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>2.0.0-beta2</Version>
-    <Authors>Sino</Authors>
-    <Company />
+    <Version>2.0.0-beta3</Version>
+    <Authors>y-z-f</Authors>
+    <Company>江苏斯诺物联科技有限公司</Company>
     <PackageIconUrl>http://avatars0.githubusercontent.com/u/16951448?v=3&amp;s=70</PackageIconUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>asp.net core;web framework;domain driven design</PackageTags>
     <Description>基础类库</Description>
+    <PackageLicenseUrl>https://github.com/Vip56/Sino.Web/blob/dev/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/Vip56/Sino.Web</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Vip56/Sino.Web.git</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
