--- a/src/Sino.Web/Sino.Web.csproj
+++ b/src/Sino.Web/Sino.Web.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>2.0.0-beta4</Version>
+    <Version>2.0.0-beta5</Version>
     <Authors>y-z-f</Authors>
     <Company>江苏斯诺物联科技有限公司</Company>
     <PackageIconUrl>http://avatars0.githubusercontent.com/u/16951448?v=3&amp;s=70</PackageIconUrl>
@@ -12,6 +12,7 @@
     <PackageLicenseUrl>https://github.com/Vip56/Sino.Web/blob/dev/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/Vip56/Sino.Web</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Vip56/Sino.Web.git</RepositoryUrl>
+    <AssemblyVersion>2.0.0.5</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
